Code cleanup for cgi.

--- a/cgitest.html
+++ b/cgitest.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-	<h2>Simple</h2>
-	<p><a href="/cgi-bin/cgitest.py">Simple greeting (python)</a></p>
+	<p><a href="/cgi-bin/hello.py">Simple greeting</a></p>
 </body>
 </html>
